--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "classnames": "^2.3.2",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
@@ -21,6 +22,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
