--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "incremental": true
   },
   "include": [
-    "next-env.d.ts",
+    "next-env-custom.d.ts",
+    "svg.d.ts",
     "**/*.ts",
     "**/*.tsx"
   ],
