--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.2",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0"
   },
