--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,6 +10,11 @@
         "indentation": [
             "tab"
         ],
-        "color-hex-case": "upper"
+        "color-hex-case": "upper",
+        "selector-class-pattern": null,
+        "max-line-length": [
+            200
+        ],
+        "declaration-block-no-redundant-longhand-properties": null
     }
 }
